<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.rafal.movielibrary.viewmodel.AddMovieViewModel"/>
        <variable
            name="pickCover"
            type="android.view.View.OnClickListener"/>
        <import type="com.rafal.movielibrary.viewmodel.util.IntConverter"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addMovieLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/margin_large"
                tools:context=".AddMovieActivity">

                <ImageView
                    android:id="@+id/movieCover"
                    android:layout_width="@dimen/movie_cover_width"
                    android:layout_height="@dimen/movie_cover_height"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_large"
                    android:onClick="@{pickCover}"
                    app:imageFromUri="@{viewModel.movieCover}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/movie_item_image" />

                <EditText
                    android:id="@+id/movieTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_large"
                    android:ems="10"
                    android:inputType="none"
                    android:hint="@string/movie_title"
                    android:text="@={viewModel.movieTitle}"
                    android:importantForAutofill="no"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movieCover" />

                <EditText
                    android:id="@+id/editYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_large"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/year_released"
                    android:text="@={IntConverter.toString(editYear, viewModel.movieYear, viewModel.movieYear)}"
                    android:importantForAutofill="no"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

                <Switch
                    android:id="@+id/switchPlannedWatched"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_large"
                    android:paddingBottom="@dimen/margin_normal"
                    android:paddingTop="@dimen/margin_normal"
                    android:showText="true"
                    android:textOn="@string/watched_title"
                    android:textOff="@string/planned_title"
                    android:thumbTextPadding="@dimen/margin_normal"
                    android:thumb="@drawable/empty"
                    android:checked="@={viewModel.movieStatus}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editYear" />

                <include
                    layout="@layout/rating_stars"
                    android:id="@+id/toggle_rating"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switchPlannedWatched"
                    app:isGone="@{!viewModel.movieStatus}"
                    app:starsAdapter="@{viewModel.toggleRating}" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_anchorGravity="bottom|right|end"
            android:src="@drawable/ic_done_black_24dp"
            android:onClick="@{viewModel.addMovie}"
            android:layout_gravity="end|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>